<resources>
    <string name="app_name">WeatherPrediction</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="humidity">Humidity</string>
    <string name="next_5_days">Next 5 Days</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="about_app">About app</string>
    <string name="search">Search</string>
    <string name="start_typing">Start typing for find your location…</string>
    <string name="about_app_full_text">Weatherapp is a simple forecast app, which uses some APIs to fetch 5 day / 3 hour forecast data from the OpenWeatherMap and to fetch places,cities,counties,coords etc. from Algolia Places. The main goal of this app is to be a sample of how to build an high quality Android application that uses the Architecture components, Dagger etc. in Kotlin.</string>
    <string name="github_url">https://github.com/furkanaskin/Weatherapp</string>
    <string name="see_on_github">See on Github</string>
    <string name="dismiss">Dismiss</string>

    <string name="label_enter_city">Enter City</string>
    <string name="label_enter_country">Enter Country</string>
    <string name="label_save">Save</string>



    <string name="text_humidity">%1$d °</string>

    <string name="error_enter_country">Please enter Country</string>
    <string name="error_enter_city">Please enter City</string>
    <string name="error_valid_pair">Please enter valid country and city pair</string>

    <string name="title_weather">Weather Report</string>
    <string name="title_search_city">Search City</string>

    <string name="title_change_city">Change City</string>
    <string name="dialog_title">Please Select a city</string>
    <string name="dialog_select">Select</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title_alert">ALERT</string>
    <string name="dialog_ok">OK</string>

    <string name="content_description_forecast_icon">Forecast icon</string>
    <string name="content_description_current_icon">Current icon</string>
    <string name="content_description_type_icon">type icon</string>

    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing .. </string>

    <string name="explore">Explore</string>

    <string name="alert_less_temp"> %1$s ° - Alert: temp less min</string>
    <string name="alert_more_temp">%1$s ° - Alert: temp more than max</string>

    <string name="message_network_issue">Network not connected"</string>
</resources>