<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <import type="com.rohan.weatherprediction.base.presentation.ProgressState"/>

        <variable
            name="viewModel"
            type="com.rohan.weatherprediction.feature.home.HomeViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@android:color/holo_red_light"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/layoutMargin16"
            app:strokeColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:visible="@{viewModel.state == ProgressState.ERROR}"
            app:strokeWidth="@dimen/height2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="@dimen/layoutMargin10"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                style="@style/fontOnlyBold"
                android:text="@string/message_network_issue"
                app:drawableEndCompat="@android:drawable/stat_notify_error" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/layoutMargin10"
            style="@style/fontOnlyBold"
            android:textSize="@dimen/font_size18"
            android:id="@+id/refresh"
            android:onClick="@{() -> viewModel.refresh()}"
            app:drawableStartCompat="@drawable/ic_refresh"
            android:text="@string/refresh"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layoutMargin10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refresh"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/layoutMargin16"
                    android:checkable="false"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/today"
                    android:textColor="@color/chipTextColor"
                    app:chipBackgroundColor="@color/chipItemBackgroundColor" />

                <include
                    android:id="@+id/container_forecast"
                    layout="@layout/layout_dashboard_current"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chipToday"
                    android:layout_marginStart="@dimen/layoutMargin16"
                    android:layout_marginTop="@dimen/layoutMargin16"
                    android:layout_marginEnd="@dimen/layoutMargin16"
                    android:layout_marginBottom="@dimen/layoutMargin32"
                    app:lifeCycleModel="@{viewModel}" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:visible="@{viewModel.state == ProgressState.LOADING}"
                    />

                <TextView
                    android:id="@+id/textViewForecastHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container_forecast"
                    android:layout_marginStart="16dp"
                    android:text="@string/next_5_days"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/font_size18"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layoutMargin32"
                    android:layout_below="@id/textViewForecastHeader"
                    android:paddingBottom="@dimen/layoutMargin32"
                    android:layout_marginStart="@dimen/layoutMargin8"
                    android:layout_marginTop="@dimen/layoutMargin16"
                    android:layout_marginEnd="@dimen/layoutMargin8"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>